<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grandma Gotchi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_game">start game</string>
    <string name="label_grannyName">Name:</string>
    <string name="title_activity_living_room">LivingRoomActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_living_room">This is the Living Room (watching TV and order Food)</string>
    <string name="fragment_kitchen">This is the Kitchen (eat and drink)</string>
    <string name="fragment_dressing_room">This is the Dressing Room (change cloth)</string>
    <string name="fragment_washing_room">This is the Washingroom (wash clothes, dishes or the whole house)</string>
    <string name="fragment_bedroom">This is the Bedroom (sleep zZzZZzz)</string>
    <string name="fragment_drugstore">This is the Drugstore (get medication)</string>
    <string name="hint_login_name">Grannys Name</string>
    <string name="tv_username">User Name</string>
    <string name="tv_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_new_game">Create New Game</string>
    <string name="title_activity_create_new_game">CreateNewGameActivity</string>
    <string name="btn_start_game">Start Game</string>
    <string name="btn_description_drugs">Drugs</string>
    <string name="btn_description_soap">Soap</string>
    <string name="btn_description_tv">TV</string>
    <string name="btn_description_music">Musik</string>
    <string name="btn_description_broom">Broom</string>
    <string name="btn_description_food">Eat</string>
    <string name="btn_description_drink">Drink</string>
    <string name="btn_description_help_bedroom">Help</string>
    <string name="btn_description_wake_up">Wake Up</string>
    <string name="btn_description_shopcart">Shop</string>
    <string name="btn_description_warderobe">Warderobe</string>
    <string name="settings_roomactivity_change_account">Change Account</string>
    <string name="difficulty_levels">Difficulty Levels</string>

    <string-array name="difficulty_levels_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="title_activity_tic_tac_toe_game">Game Time!</string>
    <string name="empty_Field"></string>
    <string name="player_Field">X</string>
    <string name="cpu_Field">O</string>
    <string name="tv_click_button">Press a field!</string>
    <string name="player_wins">You Win!</string>
    <string name="cpu_wins">Grandma wins!</string>
    <string name="play_draw">Draw!</string>
    <string name="new_game">New Game</string>
    <string name="kitchen">Kitchen</string>
    <string name="living_room">Living Room</string>
    <string name="grannys_pic">Granny</string>
    <string name="bath_room">Bath Room</string>
    <string name="timer">Timer</string>
    <string name="drink">Drink</string>
    <string name="food">Food</string>
    <string name="door">Door</string>
    <string name="timer_food">FoodTimer</string>
    <string name="timer_drink">DrinkTimer</string>
    <string name="dead">Rest in Peace</string>
    <string name="respwan">Respawn</string>
    <string name="dirty">Dirty</string>
    <string name="clean">Clean</string>
    <string name="current">Current</string>
    
    <string name="strMeal"></string>
    <string name="strInfo"></string>

</resources>
