<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >
    <!-- ListRow Left side Thumbnail image -->
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:padding="3dip" >
        <ImageView
            android:id="@+id/list_image"
            android:contentDescription="@string/app_name"
            android:layout_width="60dip"
            android:layout_height="60dip" 
            />
    </LinearLayout>
    <!-- Rightend Arrow -->
    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_action_next_item" />
    <!-- Meal-->
    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMeal"
        android:layout_alignLeft="@+id/tvMeal"
        android:paddingTop="5dip"
        android:layout_centerHorizontal="true"
        android:text="@string/strInfo"
        android:textColor="#343434"
        android:textSize="15sp" />
 	<!-- Meal Information-->
    <TextView
        android:id="@+id/tvMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/thumbnail"
        android:paddingBottom="10dip"
        android:text="@string/strMeal"
        android:textColor="#040404"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="sans" />

</RelativeLayout>