<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kitchen_gradient"
    tools:context=".FragmentKitchen" >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fragment_kitchen"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/btn_food"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/btn_description_food"
        android:onClick="btnOnClickEat"
        android:src="@drawable/ic_action_eat" />
    <!-- android:background="@android:color/transparent" -->

    <ImageButton
        android:id="@+id/btn_drink"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|left"
        android:contentDescription="@string/btn_description_drink"
        android:onClick="btnOnClickDrink"
        android:src="@drawable/ic_action_drink" />
    <!-- android:background="@android:color/transparent" -->

    <ImageButton
        android:id="@+id/btn_wash_dishes"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|right"
        android:contentDescription="@string/btn_description_drink"
        android:onClick="btnOnClickWashDishes"
        android:src="@drawable/ic_action_dishes" />
    <!-- android:background="@android:color/transparent" -->


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_gravity="left|top">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView2" android:layout_gravity="left|top" android:text="Timer"/>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:orientation="horizontal">
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Drink"
                        android:rotation="90"
                        android:id="@+id/textView3" android:layout_marginBottom="10dp" android:layout_marginTop="10dp"
                        android:layout_alignParentStart="false" android:layout_alignParentEnd="false"
                        android:layout_marginLeft="-8dp"/>
                <ImageView
                        android:layout_width="15dp"
                        android:layout_height="106dp"
                        android:id="@+id/imageView" android:layout_gravity="left|top"
                        android:background="@drawable/timer_background" android:layout_alignParentStart="false"
                        android:layout_below="@+id/textView3"/>
                <ImageView
                        android:layout_width="8dp"
                        android:layout_height="100dp"
                        android:id="@+id/drink_body" android:layout_alignParentStart="true" android:background="@drawable/timer_body"
                        android:layout_marginLeft="4dp" android:baselineAlignBottom="false" android:layout_marginTop="3dp"
                        android:layout_below="@+id/textView3"/>


            </RelativeLayout>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:id="@+id/relativeLayout" android:layout_marginLeft="2dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Food"
                        android:rotation="90"
                        android:id="@+id/textView4" android:layout_marginBottom="10dp" android:layout_marginTop="10dp"
                        android:layout_alignParentStart="false" android:layout_alignParentEnd="false"
                        android:layout_marginLeft="-8dp"/>
                <ImageView android:layout_width="15dp" android:layout_height="106dp" android:id="@+id/imageView2"
                           android:layout_gravity="left|top" android:background="@drawable/timer_background"
                           android:layout_alignParentStart="true" android:layout_below="@+id/textView4"/>
                <ImageView android:layout_width="8dp" android:layout_height="100dp" android:id="@+id/food_body"
                           android:layout_alignParentStart="true" android:background="@drawable/timer_body"
                           android:layout_marginLeft="4dp" android:baselineAlignBottom="false"
                           android:layout_marginTop="3dp" android:layout_below="@+id/textView4"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


    <!-- android:background="@android:color/transparent" -->
    
</FrameLayout>
